tests/ui/lang-items/start_lang_item_args.main_ty.stderr
error: parameter 1 of the `start` lang item is incorrect
  --> $DIR/start_lang_item_args.rs:54:20
   |
LL | fn start<T>(_main: u64, _argc: isize, _argv: *const *const u8, _sigpipe: u8) -> isize {
   |                    ^^^ help: change the type from `u64` to `fn() -> T`

error: aborting due to previous error

